# aiagent

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
apps/contest-workbench/: AuditResultModels.cpp  AuditResultModels.hpp  CompileController.cpp  CompileController.hpp  WorkbenchSessionModels.cpp  WorkbenchSessionModels.hpp  main.cpp  resources.qrc
apps/contest-workbench/qml/: Main.qml  Theme.qml
docs/: 00_INDEX.md  01_research_and_requirements.md  02_functional_requirements.md  03_architecture_and_directory_tree.md  04_ultimate_codex_goal.md  05_claude_code_pattern_reference.md  06_cpp_engineering_and_comment_style.md  07_rule_pack_spec.md  08_security_model.md  09_test_and_acceptance.md  10_implementation_roadmap.md  11_competition_agentic_workbench.md  12.md  CURRENT_IMPLEMENTATION.md  REQUIREMENT_AUDIT.md
examples/business_bad_case/: 商业计划书.md  财务预测.xlsx  路演PPT.txt
examples/full_competition_project_test_package/: 00_项目申报书.md  01_商业计划书.md  02_市场调研报告.md  03_竞品分析.md  04_财务预测.csv  06_路演PPT.txt  07_部署说明.md  CMakeLists.txt  README_调试说明.md  project_manifest.json
examples/full_competition_project_test_package/config/: app.example.yaml
examples/full_competition_project_test_package/data/: 05_用户问卷访谈记录.csv  12_实验结果.csv
examples/full_competition_project_test_package/docs/: 11_论文草稿.md
examples/full_competition_project_test_package/evidence/: 08_成果证明_合作协议摘要.md  09_软著受理证明.md  10_社会实践活动记录.md  13_市场数据来源.md
examples/full_competition_project_test_package/src/: claim_auditor.cpp  claim_auditor.hpp  main.cpp
examples/research_bad_case/: 实验结果.csv  论文草稿.md
examples/social_practice_bad_case/: 调研报告.md
examples/software_bad_case/: README.md
include/cc/agent/: AgentCommandRouter.hpp  AgentFilePolicy.hpp  AgentModels.hpp  AgentPermissionPolicy.hpp  AgentRuntime.hpp  AgentTraceSerializer.hpp  AnalyzerRegistry.hpp  AuditPipeline.hpp  AuditSessionStore.hpp  BusinessAnalyzer.hpp  ConsistencyAnalyzer.hpp  ContextCompactor.hpp  EvidenceAnalyzer.hpp  ExternalToolAdapter.hpp  HumanApprovalGate.hpp  IAnalyzer.hpp  ITool.hpp  LifecycleHookManager.hpp  PermissionGate.hpp  ProjectMemory.hpp  ReportAnalyzer.hpp  ResearchAnalyzer.hpp  SecurityAnalyzer.hpp  SocialPracticeAnalyzer.hpp  SoftwareAnalyzer.hpp  StagedAuditPipeline.hpp  ToolRegistry.hpp  WorkspaceEditor.hpp
include/cc/audit/: AuditEngine.hpp  DiffVerifier.hpp  StagedAuditEngine.hpp  TrustScoreCalculator.hpp
include/cc/claim/: ClaimExtractor.hpp
include/cc/consistency/: ConsistencyChecker.hpp
include/cc/core/: AuditModels.hpp  Enums.hpp  JsonValue.hpp  ProjectModels.hpp  Result.hpp
include/cc/cpir/: CPIRBuilder.hpp  CompetitionTypeDetector.hpp
include/cc/evidence/: EvidenceGraph.hpp  EvidenceMatcher.hpp
include/cc/inventory/: FormatDetector.hpp  GeneratedVendoredDetector.hpp  InventoryEngine.hpp  MaterialTrustPolicy.hpp  RoleClassifier.hpp  SecretScanner.hpp  SensitiveFileDetector.hpp
include/cc/llm/: AdvisoryReconciler.hpp  AuditAdvisory.hpp  AuditPromptBuilder.hpp  BrainAgentLoop.hpp  EndpointParser.hpp  HttpResponseParser.hpp  HttpsJsonClient.hpp  LlmBrain.hpp  LlmPromptGuard.hpp  LlmProviderProfile.hpp  LlmTypes.hpp
include/cc/loader/: ArchiveExtractionOutcome.hpp  ArchiveExtractor.hpp  ImportLimits.hpp  LibArchiveReader.hpp  PathGuard.hpp  ProjectLoader.hpp  ZipArchiveReader.hpp
rules/: business_innovation_rules.json  common_rules.json  ecommerce_rules.json  research_project_rules.json  social_practice_rules.json  software_project_rules.json
src/agent/: AgentCommandRouter.cpp  AgentFilePolicy.cpp  AgentPermissionPolicy.cpp  AgentRuntime.cpp  AgentTraceSerializer.cpp  AnalyzerRegistry.cpp  AuditPipeline.cpp  AuditSessionStore.cpp  BusinessAnalyzer.cpp  ConsistencyAnalyzer.cpp  ContextCompactor.cpp  EvidenceAnalyzer.cpp  ExternalToolAdapter.cpp  HumanApprovalGate.cpp  LifecycleHookManager.cpp  PermissionGate.cpp  ProjectMemory.cpp  ReportAnalyzer.cpp  ResearchAnalyzer.cpp  SecurityAnalyzer.cpp  SocialPracticeAnalyzer.cpp  SoftwareAnalyzer.cpp  StagedAuditPipeline.cpp  ToolRegistry.cpp  WorkspaceEditor.cpp
src/audit/: AuditEngine.cpp  DiffVerifier.cpp  StagedAuditEngine.cpp  TrustScoreCalculator.cpp
src/claim/: ClaimExtractor.cpp
src/consistency/: ConsistencyChecker.cpp
src/core/: Enums.cpp  JsonValue.cpp
src/cpir/: CPIRBuilder.cpp  CompetitionTypeDetector.cpp
src/evidence/: EvidenceGraph.cpp  EvidenceMatcher.cpp
src/inventory/: FormatDetector.cpp  GeneratedVendoredDetector.cpp  InventoryEngine.cpp  MaterialTrustPolicy.cpp  RoleClassifier.cpp  SecretScanner.cpp  SensitiveFileDetector.cpp
src/llm/: AdvisoryReconciler.cpp  AuditPromptBuilder.cpp  BrainAgentLoop.cpp  EndpointParser.cpp  HttpResponseParser.cpp  HttpsJsonClient.cpp  LlmBrain.cpp  LlmPromptGuard.cpp  LlmProviderProfile.cpp
src/loader/: ArchiveExtractor.cpp  LibArchiveReader.cpp  PathGuard.cpp  ProjectLoader.cpp  ZipArchiveReader.cpp
src/repair/: FixTaskGenerator.cpp  RepairDiff.cpp  RepairPlanner.cpp
src/report/: JsonReporter.cpp  MarkdownReporter.cpp
src/rules/: RuleConditionEvaluator.cpp  RuleEngine.cpp  RulePackLoader.cpp  RulePackValidator.cpp
src/text/: OpenXmlTextExtractor.cpp  PdfContentStreamParser.cpp  PdfTextExtractor.cpp  PlainTextExtractor.cpp  StructuredTextExtractor.cpp  TextExtractionService.cpp
src/util/: FileUtil.cpp  JsonUtil.cpp  StringUtil.cpp  TimeUtil.cpp
tests/: TarFixture.hpp  TestMain.cpp  TestSupport.hpp  ZipFixture.hpp
tests/agent/: AgentTests.cpp  WorkspaceEditorTests.cpp
tests/audit/: AuditTests.cpp
tests/catch2/: DependencySmokeTests.cpp
tests/claim/: ClaimTests.cpp
tests/consistency/: ConsistencyTests.cpp
tests/core/: CoreTests.cpp
tests/cpir/: CpirTests.cpp
tests/evidence/: EvidenceTests.cpp
tests/inventory/: InventoryTests.cpp
tests/llm/: LlmProviderProfileTests.cpp  LlmTests.cpp
tests/loader/: LoaderTests.cpp
tests/repair/: RepairTests.cpp
tests/report/: ReportTests.cpp
tests/rules/: RuleConditionEvaluatorTests.cpp  RulesTests.cpp
tests/text/: TextTests.cpp
tools/: acceptance.sh  package_release.sh  quality.sh
(+49 files in other folders)
